<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_column="1"
    android:padding="5dip">


    <TableRow>

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/id" />

        <EditText
            android:id="@+id/edittext_ID"
            android:layout_width="220dip"
            android:layout_height="wrap_content"
            android:inputType="number">

            <requestFocus></requestFocus>
        </EditText>
    </TableRow>


    <TableRow>// password zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edittext_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"></EditText>
    </TableRow>
    // end password zone

    <TableRow>// firstname zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/edittext_Firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></EditText>
    </TableRow>
    // end firstname zone


    <TableRow>// lastname zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/edittext_Lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></EditText>
    </TableRow>
    // end lastname zone

    <TableRow>// email zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edittext_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"></EditText>
    </TableRow>
    // end email zone

    <TableRow>// Phone zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/edittext_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"></EditText>
    </TableRow>
    // end Phone zone

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup" />


</TableLayout>
