<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText"
    android:layout_column="1">

    <TableRow>

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/id" />

        <EditText
            android:id="@+id/edittext_ID1"
            android:layout_width="220dip"
            android:layout_height="wrap_content"
            android:inputType="number">

            <requestFocus></requestFocus>
        </EditText>
    </TableRow>


    <TableRow>// password zone

        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:layout_marginLeft="25dp"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/edittext_Password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"></EditText>
    </TableRow>
    // end password zone
    <Button
        android:id="@+id/logon"
        android:layout_marginLeft="125dp"
        android:layout_gravity="center"
        android:layout_marginRight="125dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickListener"
        android:text="@string/login"/>
</TableLayout>
